tests/snapshots/examples_fixtures/patterns__match_identifier_binding_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/match_identifier_binding_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
