tests/snapshots/examples_fixtures/patterns__match_non_exhaustive_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/match_non_exhaustive_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
