tests/snapshots/examples_fixtures/patterns__match_wildcard_non_last_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/match_wildcard_non_last_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
