tests/snapshots/examples_fixtures/patterns__option_match.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/option_match.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
