tests/snapshots/examples_fixtures/patterns__option_match2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/option_match2.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:3:1
  |
3 | print("=== Option and Match Tests ===");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/patterns/option_match2.flx:3:1
  |
3 | print("=== Option and Match Tests ===");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:6:1
  |
6 | print("/n1. Basic Option types:");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:9:1
  |
9 | print(none_val);
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:10:1
   |
10 | print(some_val);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:13:1
   |
13 | print("/n2. Match with literals:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:21:1
   |
21 | print(result);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:24:1
   |
24 | print("/n3. Match with Option patterns:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:31:1
   |
31 | print(msg);
   | ^^^^^^^^^^^
   | ----------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:34:1
   |
34 | print("/n4. Array indexing:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:38:1
   |
38 | print(valid);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:39:1
   |
39 | print(invalid);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:42:1
   |
42 | print("/n5. Hash indexing:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:46:1
   |
46 | print(found);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:47:1
   |
47 | print(not_found);
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:50:1
   |
50 | print("/n6. Multiple patterns:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:58:1
   |
58 | print(desc);
   | ^^^^^^^^^^^^
   | ------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/option_match2.flx:60:1
   |
60 | print("/n=== All tests completed ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 18 errors.
== stdout ==
<not executed>
